SERVER-30394 ftdc file_manager generates an incorrect absolute diagnostic data path for mongos if the logpath is a relative path